cabal-version:      2.4
name:               ac
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Noah Haasis
maintainer:         haasis_noah@yahoo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    readme.md

executable ac
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parser, Program

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , megaparsec
                    , containers
                    , mtl
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite ac-testsuite
  Type:                     exitcode-stdio-1.0
  Main-is:                  Spec.hs
  Build-depends:            base, text, megaparsec, hspec
  other-modules:            Parser, Program
  hs-source-dirs:           test, app
